--- a/templates/calendar/attendance_report.html
+++ b/templates/calendar/attendance_report.html
@@ -1128,7 +1128,7 @@
                                 <div class="col-md-6 mb-3">
                                     <label class="form-label fw-bold">Created At</label>
                                     <div class="form-control-plaintext">
-                                        {{ note.created_at.strftime('%Y-%m-%d %H:%M:%S') }}
+                                        {{ note.created_at|egypt_time }}
                                     </div>
                                 </div>
                             </div>
