--- a/templates/notes/view.html
+++ b/templates/notes/view.html
@@ -58,7 +58,7 @@
                     <div class="col-md-6 mb-3">
                         <label class="form-label fw-bold">Created At</label>
                         <div class="form-control-plaintext">
-                            {{ note.created_at.strftime('%Y-%m-%d %H:%M:%S') }}
+                            {{ note.created_at|egypt_time }}
                         </div>
                     </div>
                 </div>
@@ -68,7 +68,7 @@
                     <div class="col-md-6 mb-3">
                         <label class="form-label fw-bold">Last Updated</label>
                         <div class="form-control-plaintext">
-                            {{ note.updated_at.strftime('%Y-%m-%d %H:%M:%S') }}
+                            {{ note.updated_at|egypt_time }}
                         </div>
                     </div>
                 </div>
