--- a/templates/permission/index.html
+++ b/templates/permission/index.html
@@ -758,7 +758,7 @@ table thead th * {
                                             </div>
                                         </div>
                                     </td>
-                                    <td>{{ permission.created_at|safe_datetime('%d/%m/%Y') }}</td>
+                                    <td>{{ permission.created_at|egypt_time }}</td>
                                     <td>
                                         <a href="{{ url_for('permission.view', id=permission.id) }}" class="btn btn-sm btn-icon btn-light me-1" data-bs-toggle="tooltip" title="View Details">
                                             <i class="fas fa-eye"></i>
